[package]
name = "dungeonCreator"
version = "0.1.0"
authors = ["doga <doga.budak@check24.de>"]
edition = "2015"

[dependencies]
arrayref = "0.3.4"
rand = "0.5"
sha2 = "0.7.1"
serde = "1.0.68"
serde_derive = "1.0.68"
serde_json = "1.0.22"
glib = "0.10.1"

[dependencies.cairo-rs]
features = ["png"]
version = "0.9.1"
